--- a/python_coroutine_by_wupeiqi/coroutine_by_wupeiqi.ipynb
+++ b/python_coroutine_by_wupeiqi/coroutine_by_wupeiqi.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# 课程笔记  \n",
-    ">《协程 & asyncio & 异步》 武沛齐  "
+    ">《协程 & asyncio & 异步》 武沛齐  \n",
+    "课程官方地址  \n",
+    "https://www.bilibili.com/video/BV1dD4y127bD  "
    ]
   },
   {
